--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     "expo-web-browser": "~14.2.0",
     "firebase": "^12.1.0",
     "lucide-react": "^0.537.0",
-    "react": "19.0.0",
+    "react": "^19.0.0",
     "react-dom": "19.0.0",
     "react-native": "0.79.5",
     "react-native-gesture-handler": "~2.24.0",
@@ -48,7 +48,8 @@
     "react-native-svg": "15.11.2",
     "react-native-vector-icons": "^10.3.0",
     "react-native-web": "~0.20.0",
-    "react-native-webview": "^13.13.5"
+    "react-native-webview": "^13.13.5",
+    "swiper": "^11.2.10"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
