--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "expo-symbols": "~0.4.5",
     "expo-system-ui": "~5.0.10",
     "expo-web-browser": "~14.2.0",
+    "fast-xml-parser": "^5.2.5",
     "firebase": "^12.1.0",
     "lucide-react": "^0.537.0",
     "react": "^19.0.0",
@@ -56,6 +57,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
+    "@expo/ngrok": "^4.1.3",
     "@types/react": "~19.0.10",
     "@types/react-native-maps": "^0.24.1",
     "eslint": "^9.25.0",
