--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "expo-system-ui": "~5.0.10",
     "expo-web-browser": "~14.2.0",
     "firebase": "^12.1.0",
+    "lottie-react-native": "^7.3.2",
     "lucide-react": "^0.537.0",
     "react": "^19.0.0",
     "react-dom": "19.0.0",
