--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "expo-web-browser": "~14.2.0",
     "fast-xml-parser": "^5.2.5",
     "firebase": "^12.1.0",
+    "lottie-react-native": "^7.3.2",
     "lucide-react": "^0.537.0",
     "react": "^19.0.0",
     "react-dom": "19.0.0",
