--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   "dependencies": {
     "@expo/vector-icons": "^14.1.0",
     "@react-native-community/blur": "^4.4.1",
-    "@react-native-community/slider": "^4.5.7",
+    "@react-native-community/slider": "4.5.6",
     "@react-native-masked-view/masked-view": "^0.3.2",
     "@react-navigation/bottom-tabs": "^7.3.10",
     "@react-navigation/elements": "^2.3.8",
@@ -37,7 +37,7 @@
     "expo-web-browser": "~14.2.0",
     "fast-xml-parser": "^5.2.5",
     "firebase": "^12.1.0",
-    "lottie-react-native": "^7.3.2",
+    "lottie-react-native": "7.2.2",
     "lucide-react": "^0.537.0",
     "react": "^19.0.0",
     "react-dom": "19.0.0",
@@ -53,7 +53,8 @@
     "react-native-view-shot": "^4.0.3",
     "react-native-web": "~0.20.0",
     "react-native-webview": "^13.13.5",
-    "swiper": "^11.2.10"
+    "swiper": "^11.2.10",
+    "expo-updates": "~0.28.17"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
