--- a/package.json
+++ b/package.json
@@ -53,7 +53,8 @@
     "react-native-view-shot": "^4.0.3",
     "react-native-web": "~0.20.0",
     "react-native-webview": "^13.13.5",
-    "swiper": "^11.2.10"
+    "swiper": "^11.2.10",
+    "expo-updates": "~0.28.17"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
