--- a/app.json
+++ b/app.json
@@ -6,7 +6,7 @@
     "orientation": "portrait",
     "icon": "./assets/images/icon.png",
     "scheme": "runwhere",
-    "userInterfaceStyle": "automatic",
+    "userInterfaceStyle": "dark",
     "newArchEnabled": true,
     "ios": {
       "supportsTablet": true,
@@ -18,7 +18,6 @@
     "android": {
       "adaptiveIcon": {
         "jsEngine": "jsc",
-        "foregroundImage": "./assets/images/adaptive-icon.png",
         "backgroundColor": "#ffffff"
       },
       "edgeToEdgeEnabled": true,
@@ -34,10 +33,10 @@
       [
         "expo-splash-screen",
         {
-          "image": "./assets/images/splash-icon.png",
+          "image": "./assets/images/runwhere-splash.png",
           "imageWidth": 200,
           "resizeMode": "contain",
-          "backgroundColor": "#ffffff"
+          "backgroundColor": "#fffff"
         }
       ]
     ],
@@ -54,7 +53,7 @@
       "policy": "appVersion"
     },
     "updates": {
-      "url": "https://u.expo.dev/006bf062-90b6-4acc-b6d9-3c163a30f480"
+      "url": "https://u.expo.dev/327ea47b-08cd-4f44-95fc-3174262e3100"
     },
     "owner": "kaydee21"
   }
